examples/test/testpolicy13972.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13972
  namespace: namespace273
spec:
  podSelector:
    matchLabels:
      key18: value6
      key19: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value35
      podSelector:
        matchLabels:
          key41: value23
          key2: value41
